add modal to confirm deletion of sample, re #993

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -914,6 +914,30 @@
     opacity: 0;
 }
 
+/* The Modal (background) */
+.afs-modal {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #555555;
+    padding-top: 50px;
+    opacity: .9;
+}
+/* Modal Content/Box */
+.afs-modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 400px;
+    padding: 0px 20px 20px 20px;
+}
+
+
 @media (min-width: 768px) {
     #navbar .brand-title {
         padding: 0 0.5em 0 1em;
