Update message style, #1029

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -886,8 +886,8 @@
 
 .afs-saving-message {
     font-size: 20px;
-    color: #eee;
-    text-shadow: 2px 2px 4px #000;
+    color: #444;
+    text-shadow: 2px 2px 4px #ddd;
     font-weight: 600;
     top: 25%;
     left: 25%;
