--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -35,6 +35,21 @@
 <div class="workbench-card-sidepanel-border"></div>
 <div class="workbench-card-sidepanel-body">
 
+    <!-- Popup modal for deleting a sample location -->
+    <div class="afs-modal" data-bind="visible: showingAnalysisAreaDeleteModal">
+        <div class="afs-modal-content">
+            <h1>{% trans "Delete Analysis Area" %}</h1>
+            <p>{% trans "Are you sure you want to delete the analysis area?" %}</p>
+    
+            <div class="afs-modal-clearfix">
+                <button type="button" data-bind="click: showAnalysisAreaDeleteModal(false)" class="btn btn-success">
+                    {% trans "Cancel" %}</button>
+                <button type="button" data-bind="click: deleteAnalysisAreaInstance" class="btn btn-danger">
+                    {% trans "Delete" %}</button>
+            </div>
+        </div>
+    </div>
+
     <div data-bind="css: card.model.cssclass">
         <div class="new-provisional-edit-card-container">
             <div class="card">
@@ -127,6 +142,12 @@
                                             "
                                         >
                                             <!-- ko if: $data.isLocked() -->
+                                            <td style="cursor: pointer; width: 30px;">
+                                                <a href="javascript:void(0);"
+                                                    data-bind="click: function() { $parent.viewAnalysisAreaInstance($data); }, clickBubble: false">
+                                                    <i class="fa fa-eye map-card-feature-edit"></i>
+                                                </a>
+                                            </td>
                                             <td style="width: 30px;">
                                                 <a href="javascript:void(0);" style="cursor: unset;">
                                                     <i class="fa fa-lock"></i>
@@ -136,13 +157,13 @@
                                             <!-- ko ifnot: $data.isLocked() -->
                                             <td style="cursor: pointer; width: 30px;">
                                                 <a href="javascript:void(0);"
-                                                    data-bind="click: function() { $parent.editAnalysisAreaInstance($data); }, clickBubble: false">
+                                                    data-bind="click: function() { $parent.viewAnalysisAreaInstance($data); }, clickBubble: false">
                                                     <i class="fa fa-pencil map-card-feature-edit"></i>
                                                 </a>
                                             </td>
                                             <td style="cursor: pointer; width: 30px;">
                                                 <a href="javascript:void(0);"
-                                                    data-bind="click: function() { $parent.deleteAnalysisAreaInstance($data); }, clickBubble: false">
+                                                    data-bind="click: function() { $parent.showAnalysisAreaDeleteModal($data); }, clickBubble: false">
                                                     <i class="fa fa-trash map-card-feature-edit"></i>
                                                 </a>
                                             </td>
