--- a/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/file-interpretation-step.htm
@@ -15,6 +15,13 @@
 {{ block.super }}
 {% endblock tabs %}
 
+{% block workbench %}
+<div class='loading-mask' data-bind="visible: loading"></div>
+<div class="afs-saving-message" data-bind="visible: loading, text: loadingMessage()"></div>
+<!-- ko with: $data, as: 'self' -->
+    {{ block.super }}
+<!-- /ko -->
+{% endblock workbench %}
 
 {% block content_management %}
 <!-- ko if: selectedFile -->
@@ -38,101 +45,6 @@
                 } -->
             <!-- /ko -->
             <!-- /ko -->
-            <!--ko if: !displayContent.renderer || displayContent.validRenderer === false -->
-            <div class="file-chart-upload-panel">
-                <div class="gallery-controls new-tile">
-                    <div class="dropzone-photo-upload">
-                        <div class="file-select-window">
-                            <!--ko if: displayContent.availableRenderers.length === 0 -->
-                            <div class="bord-top file-select" style="padding-bottom: 90px;">
-
-                                <!-- Image -->
-                                <div class="img-lg img-circle rr-splash-img-container">
-                                    <img class="rr-splash-img" src="/media/img/answers.png" alt="Resource Editor">
-                                </div>
-
-                                <!-- Splash Title -->
-                                <h2 class="rr-splash-title">{% trans 'Unable to display the selected file' %}</h2>
-
-                                <!-- Splash Instructions -->
-                                <h3 class="rr-splash-description">{% trans "This file can't be displayed." %}</h3>
-
-                                <!-- Splash Instructions -->
-                                <h3 class="rr-splash-description">{% trans "It may be a proprietary format or there isn't a loader available yet " %}</h3>
-
-                                <!-- Splash Instructions -->
-                                <h3 class="rr-splash-description">{% trans "to present it in this webpage." %}</h3>
-                            </div>
-                            <!--/ko-->
-
-                            <!--ko if: displayContent.availableRenderers.length > 0 -->
-                            <div class="bord-top file-select loader-select">
-                                <div class="">
-                                    <!--ko if: displayContent.validRenderer === false -->
-                                    <h4 class="loader-error-message">{% trans 'Unable to parse your file with the '%}
-                                        <span data-bind="text:displayContent.renderer.title"></span>{% trans 'loader'%}
-                                    </h4>
-                                    <!--/ko-->
-
-                                    <h2>{% trans 'Select File Loader' %}</h2>
-                                    <h4>{% trans 'Select the loader best suited for processing and visualizing the selected file' %}</h4>
-                                    <div style="display: flex; flex-flow: wrap; padding: 15px 25px;">
-
-                                        <!--ko foreach: displayContent.availableRenderers -->
-                                        <div>
-                                            <div class="r-grid-item relative" style="border: 1px solid #c4c4c4">
-                                                <div class=""
-                                                    style="display:flex; flex-direction: column; background-color: #fdfdfd">
-                                                    <h4 class="r-select-title" data-bind="text: $data.title"></h4>
-                                                </div>
-                                                <div>
-                                                    <div class="r-select-card"
-                                                        style="color: #30517a; background-color: #fdfdfd">
-                                                        <div class="r-select-circle loader-button" style="top: 55px">
-                                                            <span><i data-bind="attr:{class: ($data.iconclass +' r-select-icon')}"
-                                                                    class="fa fa fa-user r-select-icon"></i></span>
-                                                        </div>
-                                                        <div class="r-desc-container">
-                                                            <p data-bind="text: $data.description"
-                                                                style="color: #30517a; background-color: #fdfdfd"
-                                                                class="r-select-desc"></p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-                                                <!-- card Tools -->
-                                                <div class="r-select-card-footer">
-                                                    <div class="">
-                                                        <div data-bind="click: function(){$parent.applyRendererToSelected($data)}"
-                                                            style="border-top: 1px solid #c4c4c4;"
-                                                            class="btn btn-primary btn-resource-select" role="button">
-                                                            {% trans 'Select' %}
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!--/ko-->
-                                    </div>
-                                </div>
-                                <br>
-                            </div>
-                            <div class="file-upload-footer">
-                                <span class="loader-selector"
-                                    data-bind="component: {
-                                        name: 'views/components/simple-switch',
-                                        params: {value: applyToAll, config:{label: '{% trans "Apply the same loader to all selected files in the dataset" %}'}}
-                                    }"
-                                ></span>
-                            </div>
-                            <!--/ko-->
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-            <!--/ko-->
 
         </div>
     </div>
@@ -189,6 +101,26 @@
         <!-- /ko -->
     </div>
 
+    <div data-bind="visible: selectedFile()?.file_details?.[0] != undefined && (selectedFile().file_details[0].name.endsWith('txt') || selectedFile().file_details[0].name.endsWith('dx'))">
+        <div data-bind="hidden: currentRendererValid">
+            <div style="border: 1px solid #ddd; background-color: #F8735A; display: flex; color: #fff; padding: 10px 0px; align-items: center;">
+                <i style="padding: 0px 10px;" role="presentation" class="fa fa-exclamation-triangle"></i>
+                <div>{% trans 'The current renderer is not valid.  Please select a different renderer.' %}</div>
+            </div>
+        </div>
+        <div class="format-select">
+            <input style="display:inline-block; margin-top: 70px;"
+            data-bind="select2Query: {
+                select2Config: {
+                    clickBubble: true,
+                    disabled: false,
+                    data: formats(),
+                    value: selectedFileFormat,
+                    allowClear: true,
+                    multiple: false,
+                    placeholder: {% trans "'Available Formats'" %}}}" >
+        </div>
+    </div>
     <div style="display: flex; flex-direction: column;">
         <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-end;">
             <h2 class="file-workbench-filter-header">{% trans 'File Parameters' %}</h2>
