--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -3,8 +3,8 @@
 {% load i18n %}
 
 {% block workbench %}
-<div class='loading-mask' data-bind="visible: savingFile"></div>
-<div class="afs-saving-message" data-bind="visible: savingFile, text: savingMessage()"></div>
+<div class='loading-mask' data-bind="visible: loading"></div>
+<div class="afs-saving-message" data-bind="visible: loading, text: loadingMessage()"></div>
 <!-- ko with: $data, as: 'self' -->
     {{ block.super }}
 <!-- /ko -->
@@ -31,12 +31,15 @@
 <div class="workbench-card-sidepanel-border"></div>
 <div class="workbench-card-sidepanel-body">
 
+    <!-- endif -->
+
     <div class="iiif-image-tools upload-dataset-select-dataset-files">
         <!--ko if: annotations().length > 0-->
         <div style="width:100%; display: flex; justify-content: center;">
             <button class="btn btn-md btn-mint" data-bind="visible: !self.showDatasetDetails(), click: function(){self.showDatasetDetails(true)}">{% trans "Show Selected Area Dataset Details" %}</button>
             <button class="btn btn-md btn-mint" data-bind="visible: self.showDatasetDetails, click: function(){self.showDatasetDetails(false)}">{% trans "Show Sampled Area List" %}</button>
         </div>
+
         <div style="margin-top:10px" data-bind="visible: !self.showDatasetDetails()">
             <label class="control-label">{% trans "Sampled Locations" %}</label>
             <input type="text" class="form-control" style="width: 100%;" placeholder="Filter" data-bind="textInput: partFilter">
@@ -49,7 +52,7 @@
                         <div class="panel">
                             <a role="button" data-parent="#parts-panel" aria-expanded="false" data-bind="click: function(){ $parent.showDatasetDetails(true); $parent.selectedPart(part); $parent.showEditDatasetName(false); }, attr: { href: '#' + part.tileid, 'aria-expanded': $index == 0 ? 'true' : 'false' }">
                                 <div style="height: 35px; padding: 10px;" class="file-workbench-file">
-                                    <span class="file-name manifest-manager-canvas-name" data-bind="text: part.displayname"></span>
+                                    <span class="file-name manifest-manager-canvas-name" data-bind="text: part.displayname + ' (' + part.type + ')'"></span>
                                 </div>
                             </a>
                             
@@ -59,6 +62,34 @@
                 </div>
 
                 <div data-bind="visible: self.showDatasetDetails">
+
+                    <div class="format-select" data-bind="visible: selectedPartDefaultFormat() == undefined">
+                        <input style="display:inline-block; margin-top: 70px;"
+                        data-bind="select2Query: {
+                            select2Config: {
+                                clickBubble: true,
+                                disabled: false,
+                                data: formats(),
+                                value: selectedPartDefaultFormat,
+                                allowClear: true,
+                                multiple: false,
+                                placeholder: {% trans "'Available Formats'" %}}}" >
+                    </div>
+                    <div style="margin: 0 10px" data-bind="visible: selectedPartDefaultFormat() != undefined">
+                        <span>{% trans "Default Format" %}:</span>
+                        <span style="font-weight: bold" data-bind="text: formats().find((x) => x.id == ko.unwrap(selectedPartDefaultFormat))?.text"></span>
+                    
+                        <div class="dropzone-photo-upload" style="height: 80px;" data-bind="visible: selectedPartHasCurrentObservation(), dropzone: dropzoneOptions">
+                            <div class="file-workbench-links">
+                                <a class="upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
+                                    <span>{% trans "Drag or " %}</span><span class="text-bold">{% trans "click here " %}</span><span>{% trans "to upload files" %}</span>
+                                </a>
+                            </div>
+                            <div style="min-height: 100%;">
+                                <div id="hidden-dz-previews" style="display:none"></div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="panel-collapse collapse" data-bind="attr: { id: selectedPart().tileid }, css: { in: $index() == 0}">
                         <label class="control-label" style="padding-top: 5px;">{% trans "Files in Dataset" %}</label>
                         <div class="file-workbench-files" data-bind="foreach: {data: selectedPart().datasetFiles, as: 'file'}">
@@ -83,17 +114,7 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="dropzone-photo-upload" style="height: 80px;" data-bind="visible: selectedPartHasCurrentObservation(), dropzone: dropzoneOptions">
-                        <div class="file-workbench-links">
-                            <a class="upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
-                                <span>{% trans "Drag or " %}</span><span class="text-bold">{% trans "click here " %}</span><span>{% trans "to upload files" %}</span>
-                            </a>
-                        </div>
-                        <div style="min-height: 100%;">
-                            <div id="hidden-dz-previews" style="display:none"></div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
