--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -186,10 +186,6 @@
         <!-- Names -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: nameSummary() && nameSummary().length -->
-                <div class="afs-nodata-note">No names for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: nameSummary() && nameSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -213,27 +209,35 @@
         <!-- Image -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: imageSummary() -->
-                <div class="afs-nodata-note">No images for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: imageSummary() -->
-                <div class="afs-image-service-list-item" data-bind="foreach: imageSummary">
-                    <label data-bind = "text: displayname"></label>
-                    <span class="iiif-gallery-canvas-thumbnail">
-                        <img data-bind="attr: { src: thumbnail }">
-                    </span>
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cellspacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th>{% trans "Image Manifests" %}</th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: imageSummary, dataTableOptions: getTableConfig(1) }">
+                            <tr>
+                                <td>
+                                    <div class="afs-image-service-list-item">
+                                        <label data-bind = "text: displayname"></label>
+                                        <span class="iiif-gallery-canvas-thumbnail">
+                                            <img data-bind="attr: { src: thumbnail }">
+                                        </span>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
+                
                 <!-- /ko -->
             </div>
         </div>
         <!-- Statements -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: statementsSummary() && statementsSummary().length -->
-                <div class="afs-nodata-note">No statements for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: statementsSummary() && statementsSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -257,10 +261,6 @@
         <!-- Type of Physical Thing -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: typeSummary() && typeSummary().length -->
-                <div class="afs-nodata-note">No type for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: typeSummary() && typeSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -282,10 +282,6 @@
         <!-- Identifier -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: identifierSummary() && identifierSummary().length -->
-                <div class="afs-nodata-note">No identifiers for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: identifierSummary() && identifierSummary().length -->
                 <div class="afs-table">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -309,10 +305,6 @@
         <!-- Current Owner -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: ownerSummary() && ownerSummary().length -->
-                <div class="afs-nodata-note">No owner for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: ownerSummary() && ownerSummary().length -->
                 <div class="afs-table">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -334,10 +326,6 @@
         <!-- Dimensions -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: dimensionsSummary() && dimensionsSummary().length -->
-                <div class="afs-nodata-note">No dimension information for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: dimensionsSummary() && dimensionsSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -363,10 +351,6 @@
         <!-- Creation Info -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: creationSummary() && creationSummary().length -->
-                <div class="afs-nodata-note">No creation information for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: creationSummary() && creationSummary().length -->
                 <div class="afs-table pad-btm">
                     <table class="table table-striped" cellspacing="0" width="100%">
@@ -396,10 +380,6 @@
         <!-- External URI -->
         <div class="afs-report-section">
             <div class="afs-report-subsection">
-                <!-- ko ifnot: externalURISummary() && externalURISummary().length -->
-                <div class="afs-nodata-note">No External URI for this resource</div>
-                <!-- /ko -->
-
                 <!-- ko if: externalURISummary() && externalURISummary().length -->
                 <div class="afs-table">
                     <table class="table table-striped" cellspacing="0" width="100%">
